[gd_scene load_steps=5 format=3]

[ext_resource type="Theme" uid="uid://c36ywjvt5x7kl" path="res://Assets/GuiThemes/MainTheme.tres" id="1"]
[ext_resource type="Script" path="res://Scenes/GuiScenes/Rewards/Rewards.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://jgyggu754qsc" path="res://Assets/Gui/OrSeparatorBar.png" id="3"]
[ext_resource type="PackedScene" uid="uid://byyceycgkn1xi" path="res://Scenes/GuiScenes/open_close_animation.tscn" id="4"]

[node name="Rewards" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="YouGotLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -112.0
offset_right = 32.0
offset_bottom = -89.0
text = "You got:"

[node name="ClickOnCardToView" type="Label" parent="."]
layout_mode = 0
offset_left = -71.0
offset_top = 105.0
offset_right = 73.0
offset_bottom = 128.0
text = "Click on a card to view"

[node name="Divider" type="Sprite2D" parent="."]
position = Vector2(0, 134)
texture = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -507.0
offset_top = -62.0
offset_right = 453.0
offset_bottom = -22.0
theme_override_constants/separation = 62
alignment = 1

[node name="BuyAgain" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 69.0
offset_right = 124.0
offset_bottom = 97.0
focus_mode = 0
text = "Buy Again"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = -116.0
offset_top = 69.0
offset_right = -1.0
offset_bottom = 97.0
focus_mode = 0
text = "Close"

[node name="ShowAll" type="Button" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 152.0
offset_right = 81.0
offset_bottom = 180.0
focus_mode = 0
text = "Show All"

[node name="AnimationPlayer" parent="." instance=ExtResource("4")]

[connection signal="pressed" from="BuyAgain" to="." method="_on_buy_again_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ShowAll" to="." method="_on_show_all_pressed"]
